k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-app
  namespace: ivolve

spec:
  replicas: 2

  selector:
    matchLabels:
      app: devops-app

  template:
    metadata:
      labels:
        app: devops-app

    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - devops-app
            topologyKey: "kubernetes.io/hostname"

      containers:
      - name: devops-app

        image: 306767070773.dkr.ecr.eu-north-1.amazonaws.com/zakya-devops-app:latest

        ports:
        - containerPort: 5000
